--- a/views/index.jade
+++ b/views/index.jade
@@ -15,7 +15,7 @@ html
                      span(class="icon-bar")		
                      span(class="icon-bar") 
                      span(class="icon-bar")
-               a(class="navbar-brand" href="#") Project name
+               a(class="navbar-brand" href="#") Project Name
             div(id="navbar" class="navbar-collapse collapse")
                ul(class="nav navbar-nav")
                  li(class="active"): a(href="/") Home
