--- a/views/send.jade
+++ b/views/send.jade
@@ -30,8 +30,7 @@ html
                      li: a(href="#") Yet Another Action		
      div(class="container-fluid")
         br
-        p Details to be saved on server:					 
-        p!= "First Name: " +  name
-        p!= "Second Name: " + surname
-        p!= "E-mail: " + email
-        p!= "Message: " + message
+        div(class="alert-success round")   
+        
+          p Thank you for sending us you feetback! We will response ASP!  
+          
