--- a/views/contacts.jade
+++ b/views/contacts.jade
@@ -15,7 +15,7 @@ html
                      span(class="icon-bar")		
                      span(class="icon-bar") 
                      span(class="icon-bar")
-               a(class="navbar-brand" href="#") Project Name
+               a(class="navbar-brand" href="#") Project name
             div(id="navbar" class="navbar-collapse collapse")
                ul(class="nav navbar-nav")
                  li: a(href="/") Home
